[project]
name = "llm-graph-builder-mcp"
version = "0.1.0"
description = "MCP server for Neo4j LLM Graph Builder"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
llm-graph-builder-mcp = "llm_graph_builder_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_graph_builder_mcp"]